<resources>
    <string name="app_name">BattleNetTracker</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="new_user_button">New user</string>
    <string name="check_connectivity_button">Test Conn</string>
    <string name="gpsid_text">GPSID</string>
    <string name="username_edittext">Enter username</string>
    <string name="password_edittext">Enter password</string>
    <string name="ipaddress_edittext">Enter server IP</string>
    <string name="login_screen_description_edittext">User login</string>
    <string name="serverip_edittext">192.168.0.199</string>
    <string name="activate_gps_button">Activate GPS</string>
    <string name="deactivate_gps_button">Deactivate GPS</string>
    <string name="red_team_button">Red Team</string>
    <string name="blue_team_button">Blue Team</string>
    <string name="disclaimer_heading">Disclaimer</string>
    <string name="disclaimer_text">
        BattleNetTracker is not responsible for any damage done to you or your phone.
        This software will track your position and store the values to a server.
        These values will be used to track your movement, while playing.
    </string>
</resources>
