<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical">


    <EditText
        android:id="@+id/ipaddressinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:minHeight="60dip"
        android:text="@string/serverip_edittext"
        android:textSize="15sp" >
    </EditText>
    <Button
        android:id="@+id/checkconnectivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:onClick="checkServerConnectivityFromButton"
        android:text="@string/check_connectivity_button" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/ipaddressinput"
        android:minHeight="60dip"
        android:hint="@string/username_edittext"
        android:textSize="16sp" >
    </EditText>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:inputType="textPassword"
        android:gravity="center"
        android:minHeight="60dip"
        android:hint="@string/password_edittext"
        android:textSize="16sp" >
    </EditText>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:onClick="RegisterNewUser"
            android:text="@string/register_button" />
</RelativeLayout>